--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
+
 
 * {
     padding: 0px;
@@ -7,7 +15,9 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    min-height: 100vh;
+    font-family: var(--font1);
+    background-color: white;
 }
 
 header {
@@ -17,9 +27,9 @@ header {
 }
 
 header h1 {
-    font-family: 'Passion One', cursive;
+    font-family: var(--font2);
     /* font-size: 125px; */
-    font-size: 20vh;
+    font-size: 10vw;
     font-variant: small-caps;
 
     padding-top: 50px;
@@ -48,14 +58,13 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 20px;
-    background-color: white;
 }
 
 section p {
-    font-family: 'Sriracha', cursive;
-    /* font-size: 43px; */
-    font-size: 5vh;
-    /* padding-bottom: 20px; */
+    font-family: var(--font3);
+    font-size: 2em;
+    padding-bottom: 5vh; 
+    line-height: 2em;
 }
 
 .bgwall.flower {
@@ -71,6 +80,7 @@ section p {
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473); 
     background-size: cover;
     background-attachment: fixed;
+    background-position: right center;
 }
 
 .bgwall p {
